--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "keccak": "^1.4.0",
     "secp256k1": "^3.4.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "solidity-coverage": "^0.4.8"
+  },
   "scripts": {
     "test": "truffle test"
   }
