--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "secp256k1": "^3.4.0"
   },
   "devDependencies": {
+    "coveralls": "^3.0.0",
     "solidity-coverage": "^0.4.8"
   },
   "scripts": {
-    "test": "truffle test"
+    "test": "./scripts/test.sh"
   }
 }
