--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ cache:
   directories:
     - node_modules
 before_script:
+  - npm install --global truffle
+  - npm install
   - truffle version
 script:
   - npm run test
