--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ cache:
     - node_modules
 before_script:
   - npm install --global truffle
+  - npm install --global ganache-cli
   - truffle version
 script:
   - npm run test
