Improved travis config

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "tslint-react": "^3.4.0"
   },
   "scripts": {
-    "test": "tsc && cp ./test-ts/_helpers/privateKeys.json ./test/_helpers/privateKeys.json && truffle test",
-    "coverage": "tsc && cp ./test-ts/_helpers/privateKeys.json ./test/_helpers/privateKeys.json && ./scripts/test.sh"
+    "build": "tsc && cp ./test-ts/_helpers/privateKeys.json ./test/_helpers/privateKeys.json",
+    "test": "npm run build && truffle test",
+    "coverage": "npm run build && solidity-coverage"
   }
 }
