--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rerpublic-sol",
+  "name": "republic-sol",
   "version": "0.0.0",
   "dependencies": {
     "@types/chai": "^4.1.1",
@@ -7,6 +7,7 @@
     "@types/node": "^9.3.0",
     "bignumber.js": "^5.0.0",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
     "ganache-cli": "^6.0.3",
     "keccak": "^1.4.0",
