--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
+    "ethereumjs-util": "^5.1.5",
     "ganache-cli": "^6.0.3",
+    "js-sha3": "^0.7.0",
     "keccak": "^1.4.0",
     "secp256k1": "^3.4.0",
     "typescript": "^2.6.2"
