--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-sha3": "^0.7.0",
     "keccak": "^1.4.0",
     "secp256k1": "^3.4.0",
+    "solc": "^0.4.23",
     "typescript": "^2.6.2"
   },
   "devDependencies": {
