--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
     "crypto-js": "^3.1.9-1",
+    "date": "^1.0.2",
     "ethereumjs-util": "^5.1.5",
     "ganache-cli": "^6.0.3",
     "js-sha3": "^0.7.0",
