--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date": "^1.0.2",
     "ethereumjs-util": "^5.1.5",
     "ganache-cli": "^6.0.3",
+    "js-sha256": "^0.9.0",
     "js-sha3": "^0.7.0",
     "keccak": "^1.4.0",
     "secp256k1": "^3.4.0",
