--- a/package.json
+++ b/package.json
@@ -2,25 +2,20 @@
   "name": "republic-sol",
   "version": "0.0.0",
   "dependencies": {
-    "@types/chai": "^4.1.3",
-    "@types/mocha": "^5.2.0",
-    "@types/node": "^9.6.6",
     "bignumber.js": "^6.0.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
     "crypto-js": "^3.1.9-1",
+    "eslint": "^4.19.1",
     "ganache-cli": "^6.1.0",
-    "js-sha3": "^0.7.0",
-    "typescript": "^2.8.3"
+    "js-sha3": "^0.7.0"
   },
   "devDependencies": {
     "coveralls": "^3.0.0",
     "eth-gas-reporter": "^0.1.2",
     "solc": "^0.4.23",
-    "solidity-coverage": "^0.5.0",
-    "tslint": "^5.9.1",
-    "tslint-react": "^3.5.1"
+    "solidity-coverage": "^0.5.0"
   },
   "scripts": {
     "test": "truffle test",
