--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "crypto-js": "^3.1.9-1",
     "eslint": "^4.19.1",
     "ganache-cli": "^6.1.0",
-    "js-sha3": "^0.7.0"
+    "js-sha3": "^0.7.0",
+    "zeppelin-solidity": "1.8.0"
   },
   "devDependencies": {
     "coveralls": "^3.0.0",
