--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   },
   "devDependencies": {
     "coveralls": "^3.0.0",
+    "dotenv": "^5.0.1",
     "eth-gas-reporter": "^0.1.2",
     "solc": "^0.4.23",
-    "solidity-coverage": "^0.5.0"
+    "solidity-coverage": "^0.5.0",
+    "truffle-hdwallet-provider": "0.0.5"
   },
   "scripts": {
     "test": "truffle test",
-    "coverage": "solidity-coverage"
+    "coverage": "solidity-coverage",
+    "ropsten": "truffle migrate --network ropsten --reset"
   }
 }
