--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "coveralls": "^3.0.0",
     "dotenv": "^5.0.1",
     "eth-gas-reporter": "^0.1.2",
+    "sol-merger": "^0.1.2",
     "solc": "^0.4.23",
-    "truffle-hdwallet-provider": "0.0.5",
     "solidity-coverage": "0.5.0",
+    "truffle-hdwallet-provider": "0.0.5",
     "tslint": "^5.9.1",
     "tslint-react": "^3.4.0"
   },
