--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "republic-sol",
     "version": "0.0.0",
     "dependencies": {
+        "zeppelin-solidity": "1.8.0"
+    },
+    "devDependencies": {
         "bignumber.js": "^7.2.1",
         "chai": "^4.1.2",
         "chai-as-promised": "^7.1.1",
@@ -10,17 +13,11 @@
         "eslint": "^4.19.1",
         "ganache-cli": "^6.1.0",
         "js-sha3": "^0.7.0",
-        "zeppelin-solidity": "1.8.0",
-        "truffle": "^4.1.11"
-    },
-    "devDependencies": {
+        "truffle": "^4.1.11",
         "dotenv": "^5.0.1",
-        "eth-gas-reporter": "^0.1.2",
         "truffle-hdwallet-provider": "0.0.5",
         "coveralls": "^3.0.0",
-        "solidity-coverage": "0.5.0",
-        "tslint": "^5.9.1",
-        "tslint-react": "^3.4.0",
+        "solidity-coverage": "^0.5.4",
         "solc": "^0.4.24"
     },
     "scripts": {
