--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,23 @@ coverageEnv
 coverage.json
 .coveralls.yml
 .env
-build
+build/*
+!build/contracts
+build/contracts/*
+
+# Include these build files:
+!build/contracts/LibRewardVault.json
+!build/contracts/DarknodeRegistry.json
+!build/contracts/Arc.json
+!build/contracts/DarknodeRegistry.json
+!build/contracts/ECDSA.json
+!build/contracts/Gateway.json
+!build/contracts/LibRewardVault.json
+!build/contracts/LinkedList.json
+!build/contracts/RenLedger.json
+!build/contracts/RepublicToken.json
+!build/contracts/RewardGateway.json
+!build/contracts/RewardVault.json
+!build/contracts/TraderAccount.json
+!build/contracts/TraderRegistry.json
+!build/contracts/Utils.json
