--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
+    "coveralls": "^3.0.1",
     "crypto-js": "^3.1.9-1",
+    "dotenv": "^5.0.1",
     "eslint": "^4.19.1",
     "ganache-cli": "^6.1.0",
     "js-sha3": "^0.7.0",
-    "truffle": "^4.1.11",
-    "dotenv": "^5.0.1",
-    "truffle-hdwallet-provider": "0.0.5",
-    "coveralls": "^3.0.1",
     "sol-merger": "^0.1.2",
+    "solc": "^0.4.24",
     "solidity-coverage": "^0.5.4",
-    "solc": "^0.4.24"
+    "truffle": "4.1.11",
+    "truffle-hdwallet-provider": "0.0.5"
   },
   "scripts": {
     "test": "truffle test",
