--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "sol-merger": "^0.1.2",
     "solc": "^0.4.24",
     "solidity-coverage": "^0.5.4",
-    "truffle": "^4.1.11",
+    "truffle": "^5.0.0-next.0",
     "truffle-hdwallet-provider": "0.0.5"
   },
   "scripts": {
