Add zeppelin solidity contracts

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ build/contracts/*
 !build/contracts/RenExBalances.json
 !build/contracts/TraderRegistry.json
 !build/contracts/Utils.json
+
+!node_modules/zeppelin-solidity/contracts/*
