--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chai-as-promised": "^7.1.1",
     "coveralls": "^3.0.1",
     "crypto-js": "^3.1.9-1",
+    "eth-gas-reporter": "^0.1.10",
     "ganache-cli": "^6.1.6",
     "js-sha3": "^0.7.0",
     "sol-merger": "^0.1.2",
