--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ cache:
   directories:
     - node_modules
 before_script:
-  - npm install --global truffle
-  - npm install --global ganache-cli
+  - rm -rf node_modules/ethereumjs-testrpc-sc
+  - mv .travis/ethereumjs-testrpc-sc node_modules/ethereumjs-testrpc-sc
+  - npm install --global typescript
   - truffle version
 script:
   - npm run coverage
