--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "web3": "^1.0.0-beta.35"
   },
   "scripts": {
-    "clean": "rm -r test",
+    "clean": "if [ -d \"test\" ]; then rm -r test; fi;",
     "test": "if [ -d \"test\" ]; then npm run warn; else npm run test-ts; fi;",
     "coverage": "if [ -d \"test\" ]; then npm run warn; else npm run coverage-ts; fi;",
     "merge": "sol-merger \"./contracts/**/*.sol\"",
     "warn": "echo \"Refusing to overwrite 'test' directory. Run '\\033[1;33mnpm run clean\\033[0m'.\n\"",
-    "test-ts": "(tsc && truffle test); rm -r test",
+    "test-ts": "trap \"npm run clean\" INT TERM; (tsc && truffle test); npm run clean",
     "coverage-setup": "rm -r node_modules/ethereumjs-testrpc-sc 2> /dev/null; cp -r .travis/ethereumjs-testrpc-sc node_modules/ethereumjs-testrpc-sc",
-    "coverage-ts": "(npm run coverage-setup && tsc && solidity-coverage); rm -r test"
+    "coverage-ts": "trap \"npm run clean\" INT TERM; (npm run coverage-setup && tsc && solidity-coverage); npm run clean"
   }
 }
