--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "coverage": "if [ -d \"test\" ]; then npm run warn; else npm run coverage-ts; fi;",
     "merge": "sol-merger \"./contracts/**/*.sol\"",
     "warn": "echo \"Refusing to overwrite 'test' directory. Run '\\033[1;33mnpm run clean\\033[0m'.\n\"",
-    "test-ts": "trap \"npm run clean\" INT TERM; (tsc && truffle test); npm run clean",
+    "test-ts": "trap \"npm run clean\" INT TERM; (npm run bindings && tsc && truffle test); npm run clean",
     "coverage-setup": "rm -r node_modules/ethereumjs-testrpc-sc 2> /dev/null; cp -r .travis/ethereumjs-testrpc-sc node_modules/ethereumjs-testrpc-sc",
-    "coverage-ts": "trap \"npm run clean\" INT TERM; (npm run coverage-setup && tsc && solidity-coverage); npm run clean"
+    "coverage-ts": "trap \"npm run clean\" INT TERM; (npm run bindings && npm run coverage-setup && tsc && solidity-coverage); npm run clean",
+    "bindings": "truffle compile && ./node_modules/.bin/abi-gen --abis 'build/contracts/*.json' --output ./test-ts/bindings --template './test-ts/bindings/templates/contract.handlebars' --partials './test-ts/bindings/templates/partials/*.handlebars' 1> /dev/null"
   },
   "dependencies": {
     "openzeppelin-solidity": "1.11.0"
   },
   "devDependencies": {
+    "@0xproject/abi-gen": "^1.0.5",
     "@types/chai": "^4.1.4",
     "@types/chai-as-promised": "^7.1.0",
     "@types/crypto-js": "^3.1.42",
