update orderbook contract

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ test-ts/bindings/*.ts
 !node_modules/openzeppelin-solidity/
 node_modules/openzeppelin-solidity/*
 !node_modules/openzeppelin-solidity/contracts/
+
+.zos.session
