--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "tslint": "^5.11.0",
     "typescript": "^3.1.1",
     "underscore": "^1.9.1",
-    "web3": "^1.0.0-beta.35"
+    "web3": "0.20.7"
   }
 }
