--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "ganache-cli": "^6.1.8",
     "js-sha3": "^0.8.0",
     "sol-merger": "^0.1.2",
-    "solc": "^0.4.25",
+    "solc": "0.4.25",
     "solidity-coverage": "^0.5.11",
     "truffle": "^5.0.0-beta.1",
     "tslint": "^5.11.0",
