--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test-ts": "trap \"npm run clean\" INT TERM; (npm run bindings && tsc && truffle test); npm run clean",
     "coverage-ts": "trap \"npm run clean\" INT TERM; (npm run bindings && tsc && solidity-coverage); npm run clean",
     "bindings": "truffle compile && ./node_modules/.bin/abi-gen --abis 'build/contracts/*.json' --output ./test-ts/bindings --template './test-ts/bindings/templates/contract.handlebars' --partials './test-ts/bindings/templates/partials/*.handlebars' 1> /dev/null",
-    "kovan": "truffle migrate --network kovan && npm run merge .merged/kovan"
+    "deployToKovan": "truffle migrate --network kovan && npm run merge .merged/kovan"
   },
   "dependencies": {
     "openzeppelin-solidity": "1.11.0"
