Updated bindings for new web3 version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
         "noImplicitReturns": true,
         "removeComments": true,
         "preserveConstEnums": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "esModuleInterop": true
     }
 }
