--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "coverage": "if [ -d \"test\" ]; then npm run warn; else npm run coverage-ts; fi;",
     "merge": "sol-merger \"./contracts/**/*.sol\"",
     "warn": "echo \"Refusing to overwrite 'test' directory. Run '\\033[1;33mnpm run clean\\033[0m'.\n\"",
-    "test-ts": "trap \"npm run clean\" INT TERM; (npm run bindings && tsc && truffle test); npm run clean",
-    "coverage-ts": "trap \"npm run clean\" INT TERM; (npm run bindings && tsc && solidity-coverage); npm run clean",
+    "test-ts": "trap \"npm run clean\" INT TERM; (npm run bindings && tsc && truffle test) && npm run clean",
+    "coverage-ts": "trap \"npm run clean\" INT TERM; (npm run bindings && tsc && solidity-coverage) && npm run clean",
     "bindings": "truffle compile && ./node_modules/.bin/abi-gen --abis 'build/contracts/*.json' --output ./test-ts/bindings --template './test-ts/bindings/templates/contract.handlebars' --partials './test-ts/bindings/templates/partials/*.handlebars' 1> /dev/null",
     "deployToKovan": "truffle migrate --network kovan && npm run merge .merged/kovan"
   },
