--- a/package.json
+++ b/package.json
@@ -4,45 +4,55 @@
   "repository": "https://github.io/renproject/darknode-sol",
   "scripts": {
     "clean": "if [ -d \"test\" ]; then rm -r test; fi;",
-    "test": "if [ -d \"test\" ]; then npm run warn; else npm run test-ts; fi;",
-    "coverage": "if [ -d \"test\" ]; then npm run warn; else npm run coverage-ts; fi;",
+    "test": "if [ -d \"test\" ]; then npm run warn; else npm run test:ts; fi;",
+    "coverage": "if [ -d \"test\" ]; then npm run warn; else npm run coverage:ts; fi;",
     "merge": "sol-merger \"./contracts/**/*.sol\"",
     "warn": "echo \"Refusing to overwrite 'test' directory. Run '\\033[1;33mnpm run clean\\033[0m'.\n\"",
-    "test-ts": "trap \"npm run clean\" INT TERM; (npm run bindings && tsc && truffle test); npm run clean",
-    "coverage-ts": "trap \"npm run clean\" INT TERM; (npm run bindings && tsc && solidity-coverage); npm run clean",
-    "bindings": "truffle compile && ./node_modules/.bin/abi-gen --abis 'build/contracts/*.json' --output ./test-ts/bindings --template './test-ts/bindings/templates/contract.handlebars' --partials './test-ts/bindings/templates/partials/*.handlebars' 1> /dev/null",
-    "deployToKovan": "truffle migrate --network kovan && npm run merge .merged/kovan"
+    "test:ts": "trap \"npm run clean\" INT TERM; (npm run bindings:ts && tsc && truffle test); npm run clean",
+    "coverage:ts": "trap \"npm run clean\" INT TERM; (npm run bindings:ts && tsc && solidity-coverage); npm run clean",
+    "bindings:ts": "truffle compile && ./node_modules/.bin/abi-gen --abis 'build/contracts/*.json' --output ./test-ts/typings/bindings --template './test-ts/typings/bindings/templates/contract.handlebars' --partials './test-ts/typings/bindings/templates/partials/*.handlebars' 1> /dev/null",
+    "bindings:go": "solc --allow-paths . --combined-json bin,abi,userdoc,devdoc,metadata contracts/**/*.sol | abigen -pkg bindings --out bindings.go --abi -",
+    "deployToKovan": "truffle migrate --network kovan && npm run merge .merged/kovan",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "openzeppelin-solidity": "2.2.0"
   },
   "devDependencies": {
-    "@0xproject/abi-gen": "^1.0.12",
-    "@types/chai": "^4.1.6",
+    "@0xproject/abi-gen": "^1.0.13",
+    "@types/chai": "^4.1.7",
     "@types/chai-as-promised": "^7.1.0",
-    "@types/crypto-js": "^3.1.42",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.11.3",
+    "@types/crypto-js": "^3.1.43",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^11.13.7",
     "any-promise": "^1.3.0",
-    "bignumber.js": "^7.2.1",
+    "bignumber.js": "^8.1.1",
     "bn.js": "^4.11.8",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "git://github.com/negaex/chai-bignumber.git#master",
-    "coveralls": "^3.0.2",
+    "coveralls": "^3.0.3",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^7.0.0",
     "eth-gas-reporter": "^0.1.12",
-    "ganache-cli": "^6.1.8",
+    "ganache-cli": "^6.4.3",
     "js-sha3": "^0.8.0",
-    "sol-merger": "^0.1.2",
-    "solc": "0.5.6",
-    "solidity-coverage": "^0.5.11",
-    "truffle": "5.0.13",
+    "patch-package": "^6.1.2",
+    "postinstall-postinstall": "^2.0.0",
+    "sol-merger": "^0.1.3",
+    "solc": "0.5.7",
+    "solidity-coverage": "0.6.0-beta.5",
+    "truffle": "5.0.14",
     "truffle-hdwallet-provider": "^1.0.0-web3one.5",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.1",
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.5",
     "underscore": "^1.9.1",
-    "web3": "^1.0.0-beta.35"
+    "web3": "^1.0.0-beta.52",
+    "web3-core": "^1.0.0-beta.52",
+    "web3-eth-contract": "^1.0.0-beta.52",
+    "web3-providers": "^1.0.0-beta.52"
+  },
+  "resolutions": {
+    "solc": "^0.5.7"
   }
 }
