--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "solc": "0.5.7",
     "solidity-coverage": "0.6.0-beta.5",
     "truffle": "5.0.14",
-    "truffle-hdwallet-provider": "^1.0.0-web3one.5",
+    "truffle-hdwallet-provider": "1.0.8",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5",
     "underscore": "^1.9.1",
