--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "postinstall-postinstall": "^2.0.0",
     "sol-merger": "^0.1.3",
     "solc": "0.5.7",
-    "solidity-coverage": "0.6.0-beta.5",
+    "solidity-coverage": "github:rotcivegaf/solidity-coverage#5875f5b7bc74d447f3312c9c0e9fc7814b482477",
     "truffle": "5.0.14",
     "truffle-hdwallet-provider": "1.0.8",
     "tslint": "^5.16.0",
