--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "coverage:ts": "trap \"yarn run clean\" INT TERM; (yarn run bindings:ts && tsc && solidity-coverage) && yarn run clean",
     "bindings:ts": "truffle compile && ./node_modules/.bin/abi-gen --abis 'build/contracts/*.json' --output ./test-ts/typings/bindings --template './test-ts/typings/bindings/templates/contract.handlebars' --partials './test-ts/typings/bindings/templates/partials/*.handlebars' 1> /dev/null",
     "bindings:go": "solc --allow-paths . --combined-json bin,abi,userdoc,devdoc,metadata contracts/**/*.sol | abigen -pkg bindings --out bindings.go --abi -",
-    "deployToKovan": "truffle migrate --network kovan && yarn run merge .merged/kovan",
-    "postinstall": "patch-package"
+    "deployToKovan": "truffle migrate --network kovan && yarn run merge .merged/kovan"
   },
   "dependencies": {
     "openzeppelin-solidity": "2.2.0"
@@ -37,7 +36,6 @@
     "eth-gas-reporter": "^0.1.12",
     "ganache-cli": "^6.4.3",
     "js-sha3": "^0.8.0",
-    "patch-package": "^6.1.2",
     "postinstall-postinstall": "^2.0.0",
     "sol-merger": "^0.1.3",
     "solc": "0.5.7",
