Fix coverage information in coveralls

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
       - install_deps
       - run:
           name: Run tests
-          command: yarn run coverage
+          command: yarn run coverage && yarn run coveralls
 
 workflows:
   build:
