--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "coverage:ts": "trap \"yarn run clean\" INT TERM; (yarn run bindings:ts && tsc && solidity-coverage) && yarn run clean",
     "bindings:ts": "truffle compile && ./node_modules/.bin/abi-gen --abis 'build/contracts/*.json' --output ./test-ts/typings/bindings --template './test-ts/typings/bindings/templates/contract.handlebars' --partials './test-ts/typings/bindings/templates/partials/*.handlebars' 1> /dev/null",
     "bindings:go": "solc --allow-paths . --combined-json bin,abi,userdoc,devdoc,metadata contracts/**/*.sol | abigen -pkg bindings --out bindings.go --abi -",
-    "deployToKovan": "truffle migrate --network kovan && yarn run merge .merged/kovan",
+    "deployToKovan": "truffle migrate --interactive --network kovan && yarn run merge .merged/kovan",
+    "deployToMainnet": "truffle migrate --interactive --network mainnet && yarn run merge .merged/mainnet",
     "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "dependencies": {
@@ -39,7 +40,7 @@
     "js-sha3": "^0.8.0",
     "postinstall-postinstall": "^2.0.0",
     "sol-merger": "^0.1.3",
-    "solc": "0.5.7",
+    "solc": "0.5.8",
     "solidity-coverage": "github:rotcivegaf/solidity-coverage#5875f5b7bc74d447f3312c9c0e9fc7814b482477",
     "truffle": "5.0.14",
     "truffle-hdwallet-provider": "1.0.8",
