--- a/package.json
+++ b/package.json
@@ -3,17 +3,14 @@
   "version": "0.0.3",
   "repository": "https://github.io/renproject/darknode-sol",
   "scripts": {
-    "clean": "if [ -d \"test\" ]; then rm -r test; fi;",
-    "test": "if [ -d \"test\" ]; then yarn run warn; else yarn run test:ts; fi;",
-    "coverage": "if [ -d \"test\" ]; then yarn run warn; else yarn run coverage:ts; fi;",
+    "coverage": "yarn run bindings:ts && solidity-coverage",
     "merge": "sol-merger \"./contracts/**/*.sol\"",
-    "warn": "echo \"Refusing to overwrite 'test' directory. Run '\\033[1;33myarn run clean\\033[0m'.\n\"",
-    "test:ts": "trap \"yarn run clean\" INT TERM; (yarn run bindings:ts && tsc && truffle test) && yarn run clean",
-    "coverage:ts": "trap \"yarn run clean\" INT TERM; (yarn run bindings:ts && tsc && solidity-coverage) && yarn run clean",
-    "bindings:ts": "truffle compile && abi-gen --abis 'build/contracts/*.json' --output ./test-ts/typings/bindings --template './test-ts/typings/bindings/templates/contract.handlebars' --partials './test-ts/typings/bindings/templates/partials/*.handlebars' 1> /dev/null",
+    "test": "yarn run bindings:ts && truffle test",
+    "bindings:ts": "truffle compile && abi-gen --abis 'build/contracts/*.json' --output ./test/typings/bindings --template './test/typings/bindings/templates/contract.handlebars' --partials './test/typings/bindings/templates/partials/*.handlebars' 1> /dev/null && typechain --target truffle './build/**/*.json'",
     "bindings:go": "solc --allow-paths . --combined-json bin,abi,userdoc,devdoc,metadata contracts/**/*.sol | abigen -pkg bindings --out bindings.go --abi -",
     "deployToKovan": "truffle migrate --network kovan && yarn run merge .merged/kovan",
-    "coveralls": "cat ./coverage/lcov.info | coveralls"
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "openzeppelin-solidity": "2.2.0"
@@ -37,12 +34,17 @@
     "eth-gas-reporter": "^0.1.12",
     "ganache-cli": "^6.4.3",
     "js-sha3": "^0.8.0",
+    "patch-package": "^6.1.2",
     "postinstall-postinstall": "^2.0.0",
     "sol-merger": "^0.1.3",
     "solidity-coverage": "github:rotcivegaf/solidity-coverage#5875f5b7bc74d447f3312c9c0e9fc7814b482477",
     "truffle": "5.0.14",
     "truffle-hdwallet-provider": "1.0.8",
+    "truffle-typings": "^1.0.5",
+    "ts-generator": "^0.0.8",
+    "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
+    "typechain": "^0.3.8",
     "typescript": "^3.4.5",
     "underscore": "^1.9.1",
     "web3": "^1.0.0-beta.52",
@@ -51,6 +53,7 @@
     "web3-providers": "^1.0.0-beta.52"
   },
   "resolutions": {
-    "solc": "^0.5.8"
+    "solc": "^0.5.8",
+    "solidity-coverage": "github:rotcivegaf/solidity-coverage#5875f5b7bc74d447f3312c9c0e9fc7814b482477"
   }
 }
