--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "coverage:ts": "trap \"yarn run clean\" INT TERM; (yarn run bindings:ts && tsc && solidity-coverage) && yarn run clean",
     "bindings:ts": "truffle compile && abi-gen --abis 'build/contracts/*.json' --output ./test-ts/typings/bindings --template './test-ts/typings/bindings/templates/contract.handlebars' --partials './test-ts/typings/bindings/templates/partials/*.handlebars' 1> /dev/null",
     "bindings:go": "solc --allow-paths . --combined-json bin,abi,userdoc,devdoc,metadata contracts/**/*.sol | abigen -pkg bindings --out bindings.go --abi -",
-    "deployToKovan": "truffle migrate --interactive --network kovan && yarn run merge .merged/kovan",
-    "deployToMainnet": "truffle migrate --interactive --network mainnet && yarn run merge .merged/mainnet",
+    "deployToKovan": "truffle migrate --skipDryRun --network kovan && yarn run merge .merged/kovan",
+    "deployToMainnet": "truffle migrate --skipDryRun --network mainnet && yarn run merge .merged/mainnet",
     "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "dependencies": {
@@ -25,7 +25,7 @@
     "@types/chai-as-promised": "^7.1.0",
     "@types/crypto-js": "^3.1.43",
     "@types/mocha": "^5.2.6",
-    "@types/node": "^11.13.7",
+    "@types/node": "^12.0.0",
     "any-promise": "^1.3.0",
     "bignumber.js": "^8.1.1",
     "bn.js": "^4.11.8",
@@ -34,15 +34,15 @@
     "chai-bignumber": "git://github.com/negaex/chai-bignumber.git#master",
     "coveralls": "^3.0.3",
     "crypto-js": "^3.1.9-1",
-    "dotenv": "^7.0.0",
-    "eth-gas-reporter": "^0.1.12",
+    "dotenv": "^8.0.0",
+    "eth-gas-reporter": "^0.2.0",
     "ganache-cli": "^6.4.3",
     "js-sha3": "^0.8.0",
     "postinstall-postinstall": "^2.0.0",
     "sol-merger": "^0.1.3",
     "solc": "^0.5.8",
     "solidity-coverage": "github:rotcivegaf/solidity-coverage#5875f5b7bc74d447f3312c9c0e9fc7814b482477",
-    "truffle": "5.0.14",
+    "truffle": "5.0.15",
     "truffle-hdwallet-provider": "1.0.8",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5",
