--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
     "test": "yarn run generate && truffle test",
     "bindings:ts": "truffle compile && typechain --target web3-1.0.0 './build/**/*.json'",
     "bindings:go": "solc --allow-paths . --combined-json bin,abi,userdoc,devdoc,metadata contracts/**/*.sol | abigen -pkg bindings --out bindings.go --abi -",
-    "merge": "sol-merger \"./contracts/**/*.sol\"",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "postinstall": "patch-package",
     "deploy": "truffle migrate --skipDryRun --network $NETWORK",
-    "verify": "truffle run verify --network $NETWORK",
-    "preverify": "rm -rf .merged; yarn run merge .merged"
+    "verify": "truffle run verify --network $NETWORK"
   },
   "dependencies": {
     "openzeppelin-solidity": "2.2.0"
@@ -38,7 +36,6 @@
     "js-sha3": "^0.8.0",
     "patch-package": "^6.1.2",
     "postinstall-postinstall": "^2.0.0",
-    "sol-merger": "^0.1.3",
     "solc": "^0.5.8",
     "solidity-coverage": "github:rotcivegaf/solidity-coverage#5875f5b7bc74d447f3312c9c0e9fc7814b482477",
     "truffle": "5.0.15",
