Renamed RenShift to Shifter, added upgrability to Shifter
The upgradiblity uses a simple forwarding pattern where the contract can be set to point to a next Shifter and forward all calls to it (hardcoded in each function). This is more verbose but less error prone.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "verify": "truffle run verify --network $NETWORK"
   },
   "dependencies": {
-    "openzeppelin-solidity": "2.2.0"
+    "openzeppelin-solidity": "2.2.0",
+    "zos": "^2.3.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
