--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "@types/chai": "^4.1.7",
     "@types/chai-as-promised": "^7.1.0",
     "@types/crypto-js": "^3.1.43",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.0.8",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^12.0.0",
     "any-promise": "^1.3.0",
-    "bignumber.js": "^9.0.0",
+    "bignumber.js": "^8.1.1",
     "bn.js": "^4.11.8",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "git://github.com/negaex/chai-bignumber.git#master",
-    "coveralls": "^3.0.4",
+    "coveralls": "^3.0.3",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^8.0.0",
     "eth-gas-reporter": "^0.2.0",
@@ -39,15 +39,15 @@
     "postinstall-postinstall": "^2.0.0",
     "solc": "0.5.9",
     "solidity-coverage": "github:rotcivegaf/solidity-coverage#5875f5b7bc74d447f3312c9c0e9fc7814b482477",
-    "truffle": "5.0.22",
-    "truffle-hdwallet-provider": "1.0.10",
-    "truffle-plugin-verify": "^0.2.2",
-    "truffle-typings": "^1.0.6",
+    "truffle": "5.0.15",
+    "truffle-hdwallet-provider": "1.0.8",
+    "truffle-plugin-verify": "^0.2.0-alpha2",
+    "truffle-typings": "^1.0.5",
     "ts-generator": "^0.0.8",
-    "ts-node": "^8.2.0",
-    "tslint": "^5.17.0",
-    "typechain": "^0.3.14",
-    "typescript": "^3.5.1",
+    "ts-node": "^8.1.0",
+    "tslint": "^5.16.0",
+    "typechain": "^0.3.8",
+    "typescript": "^3.4.5",
     "underscore": "^1.9.1",
     "web3": "^1.0.0-beta.52",
     "web3-core": "^1.0.0-beta.52",
