--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "truffle": "5.0.15",
     "truffle-hdwallet-provider": "1.0.10",
     "truffle-plugin-verify": "^0.2.2",
-    "truffle-typings": "^1.0.7",
+    "truffle-typings": "https://github.com/republicprotocol/truffle-typings",
     "ts-generator": "^0.0.8",
     "ts-node": "^8.2.0",
     "tslint": "^5.17.0",
