--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "bn.js": "^4.11.8",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "chai-bignumber": "git://github.com/negaex/chai-bignumber.git#master",
+    "chai-bignumber": "github:noiach/chai-bignumber.git#fd75e47b2980c3a151d2a05b070293b18a9bddce",
     "coveralls": "^3.0.4",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^8.0.0",
