--- a/package.json
+++ b/package.json
@@ -15,50 +15,39 @@
     "verify": "truffle run verify --network $NETWORK"
   },
   "dependencies": {
-    "openzeppelin-solidity": "2.3.0",
-    "truffle-typings": "^1.0.8",
-    "zos": "^2.3.1"
+    "openzeppelin-solidity": "2.3.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/chai-as-promised": "^7.1.0",
-    "@types/crypto-js": "^3.1.43",
     "@types/ethereumjs-abi": "^0.6.3",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.0.8",
-    "any-promise": "^1.3.0",
     "bignumber.js": "^9.0.0",
     "bn.js": "^4.11.8",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "github:noiach/chai-bignumber.git#fd75e47b2980c3a151d2a05b070293b18a9bddce",
     "coveralls": "^3.0.4",
-    "crypto-js": "^3.1.9-1",
     "dotenv": "^8.0.0",
     "eth-gas-reporter": "^0.2.1",
     "ethereumjs-abi": "^0.6.7",
     "ganache-cli": "^6.4.4",
-    "js-sha3": "^0.8.0",
     "patch-package": "^6.1.2",
-    "postinstall-postinstall": "^2.0.0",
     "solc": "0.5.9",
     "solidity-coverage": "github:rotcivegaf/solidity-coverage#5875f5b7bc74d447f3312c9c0e9fc7814b482477",
     "truffle": "5.0.15",
     "truffle-hdwallet-provider": "1.0.11",
-    "truffle-plugin-verify": "github:vinceau/truffle-plugin-verify#48eda8689136501b98f7adac1391371dc4553efe",
-    "ts-generator": "^0.0.8",
+    "truffle-plugin-verify": "github:vinceau/truffle-plugin-verify#c1bbe423f33989a479c04d6a9049beee4793b435",
+    "truffle-typings": "^1.0.8",
     "ts-node": "^8.3.0",
     "tslint": "^5.17.0",
     "typechain": "^0.3.17",
     "typescript": "^3.5.2",
-    "underscore": "^1.9.1",
     "web3": "^1.0.0-beta.55",
-    "web3-core": "^1.0.0-beta.55",
-    "web3-eth-contract": "^1.0.0-beta.55",
-    "web3-providers": "^1.0.0-beta.55"
+    "web3-utils": "^1.0.0-beta.55"
   },
   "resolutions": {
-    "solc": "0.5.9",
-    "solidity-coverage": "github:rotcivegaf/solidity-coverage#5875f5b7bc74d447f3312c9c0e9fc7814b482477"
+    "solc": "0.5.9"
   }
 }
