--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "solidity-coverage": "github:rotcivegaf/solidity-coverage#5875f5b7bc74d447f3312c9c0e9fc7814b482477",
     "truffle": "5.0.15",
     "truffle-hdwallet-provider": "^1.0.11",
-    "truffle-plugin-verify": "github:vinceau/truffle-plugin-verify#c1bbe423f33989a479c04d6a9049beee4793b435",
+    "truffle-plugin-verify": "^0.3.1",
     "truffle-typings": "^1.0.8",
     "ts-node": "^8.3.0",
     "tslint": "^5.17.0",
