--- a/package.json
+++ b/package.json
@@ -22,32 +22,32 @@
     "@types/chai-as-promised": "^7.1.0",
     "@types/ethereumjs-abi": "^0.6.3",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.0.8",
+    "@types/node": "^12.6.2",
     "bignumber.js": "^9.0.0",
-    "bn.js": "^4.11.8",
+    "bn.js": "^5.0.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "github:noiach/chai-bignumber.git#fd75e47b2980c3a151d2a05b070293b18a9bddce",
-    "coveralls": "^3.0.4",
+    "coveralls": "^3.0.5",
     "dotenv": "^8.0.0",
-    "eth-gas-reporter": "^0.2.1",
+    "eth-gas-reporter": "^0.2.4",
     "ethereumjs-abi": "^0.6.7",
-    "ganache-cli": "^6.4.4",
+    "ganache-cli": "^6.4.5",
     "patch-package": "^6.1.2",
-    "solc": "0.5.9",
-    "solidity-coverage": "github:rotcivegaf/solidity-coverage#5875f5b7bc74d447f3312c9c0e9fc7814b482477",
-    "truffle": "5.0.15",
-    "truffle-hdwallet-provider": "^1.0.11",
+    "solc": "0.5.10",
+    "solidity-coverage": "^0.6.2",
+    "truffle": "5.0.27",
+    "truffle-hdwallet-provider": "^1.0.14",
     "truffle-plugin-verify": "^0.3.1",
     "truffle-typings": "^1.0.8",
     "ts-node": "^8.3.0",
-    "tslint": "^5.17.0",
-    "typechain": "^0.3.17",
-    "typescript": "^3.5.2",
+    "tslint": "^5.18.0",
+    "typechain": "^0.3.19",
+    "typescript": "^3.5.3",
     "web3": "^1.0.0-beta.55",
     "web3-utils": "^1.0.0-beta.55"
   },
   "resolutions": {
-    "solc": "0.5.9"
+    "solc": "0.5.10"
   }
 }
