--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "tslint": "^5.18.0",
     "typechain": "^0.3.19",
     "typescript": "^3.5.3",
-    "web3": "^1.0.0-beta.55",
-    "web3-utils": "^1.0.0-beta.55"
+    "web3": "^2.0.0-alpha",
+    "web3-utils": "^2.0.0-alpha"
   },
   "resolutions": {
     "solc": "0.5.11"
