Added chaosnet deployment

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "bindings:go": "solc --allow-paths . --combined-json bin,abi,userdoc,devdoc,metadata contracts/**/*.sol | abigen -pkg bindings --out bindings.go --abi -",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prepare": "patch-package",
-    "deploy": "truffle migrate --skipDryRun --network $NETWORK",
+    "deploy": "truffle migrate --network $NETWORK",
+    "skipDryRun": " // --skipDryRun",
     "clean-build": "grep -R -l 'networks\": {}' build --exclude-dir=development | xargs rm; node build/clean.js",
     "verify": "truffle run verify --network $NETWORK"
   },
