--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "bindings:go": "solc --allow-paths . --combined-json bin,abi,userdoc,devdoc,metadata contracts/**/*.sol | abigen -pkg bindings --out bindings.go --abi -",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prepare": "patch-package",
-    "deploy": "truffle migrate --network $NETWORK",
-    "skipDryRun": " // --skipDryRun",
-    "clean-build": "grep -R -l 'networks\": {}' build --exclude-dir=development | xargs rm; node build/clean.js",
+    "deploy": "truffle migrate --skipDryRun --network $NETWORK",
+    "clean-build": "echo  \"Have all contracts been verified on Etherscan? Continuing in 10 seconds...\" && sleep 10 && grep -R -l 'networks\": {}' build --exclude-dir=development | xargs rm; node build/clean.js",
     "verify": "truffle run verify --network $NETWORK"
   },
   "dependencies": {
@@ -39,7 +38,7 @@
     "solidity-coverage": "^0.6.4",
     "truffle": "5.0.31",
     "truffle-hdwallet-provider": "^1.0.16",
-    "truffle-plugin-verify": "^0.3.2",
+    "truffle-plugin-verify": "0.3.0",
     "truffle-typings": "^1.0.8",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
