test: fixed type errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
             "chai"
         ],
         "module": "commonjs",
-        "noImplicitAny": false,
+        "noImplicitAny": true,
         "noImplicitReturns": true,
         "removeComments": true,
         "preserveConstEnums": true,
