Updated Claimable to use Ownable, improved revert reason checks in tests

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "generate": "truffle compile && typechain --target truffle './build/**/*.json'",
     "coverage": "yarn run generate && solidity-coverage",
     "test": "yarn run generate && truffle test",
-    "bindings:ts": "truffle compile && typechain --target web3-v1 './build/**/*.json'",
-    "bindings:go": "solc --allow-paths . --combined-json bin,abi,userdoc,devdoc,metadata contracts/**/*.sol | abigen -pkg bindings --out bindings.go --abi -",
+    "bindings:ts": "truffle compile && typechain --target web3-v1 \"./build/chaosnet/*.json\"",
+    "bindings:go": "solc darknode-sol=`pwd`/node_modules/darknode-sol openzeppelin-solidity=`pwd`/node_modules/openzeppelin-solidity --combined-json bin,abi,userdoc,devdoc,metadata $(find contracts -type f -name '*.sol') | abigen -pkg bindings --out bindings.go --abi -",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prepare": "patch-package",
     "deploy": "truffle migrate --network $NETWORK",
