contracts,tests: added proxy-based Protocol contract

--- a/package.json
+++ b/package.json
@@ -16,43 +16,44 @@
     "verify": "truffle run verify --network $NETWORK"
   },
   "dependencies": {
+    "@openzeppelin/upgrades": "^2.6.0",
     "openzeppelin-solidity": "2.4.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.4",
+    "@types/chai": "^4.2.7",
     "@types/chai-as-promised": "^7.1.2",
     "@types/ethereumjs-abi": "^0.6.3",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.5",
+    "@types/node": "^13.1.6",
     "bignumber.js": "^9.0.0",
-    "bn.js": "^5.0.0",
+    "bn.js": "^5.1.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "github:noiach/chai-bignumber.git#fd75e47b2980c3a151d2a05b070293b18a9bddce",
-    "coveralls": "^3.0.7",
+    "coveralls": "^3.0.9",
     "dotenv": "^8.2.0",
-    "eth-gas-reporter": "^0.2.12",
+    "eth-gas-reporter": "^0.2.14",
     "ethereumjs-abi": "^0.6.8",
-    "ganache-cli": "^6.7.0",
+    "ganache-cli": "^6.8.1",
     "hash.js": "^1.1.7",
     "patch-package": "^6.2.0",
-    "solc": "0.5.12",
+    "solc": "0.6.1",
     "solidity-coverage": "^0.6.7",
-    "truffle": "^5.0.43",
+    "truffle": "^5.1.8",
     "truffle-hdwallet-provider": "^1.0.17",
-    "truffle-plugin-verify": "0.3.0",
+    "truffle-plugin-verify": "0.3.6",
     "truffle-typings": "^1.0.8",
-    "ts-node": "^8.4.1",
-    "tslint": "^5.20.0",
+    "ts-node": "^8.6.2",
+    "tslint": "^5.20.1",
     "typechain": "^1.0.3",
-    "typechain-target-truffle": "^1.0.0",
-    "typechain-target-web3-v1": "^1.0.0",
-    "typescript": "^3.6.4",
+    "typechain-target-truffle": "^1.0.2",
+    "typechain-target-web3-v1": "^1.0.4",
+    "typescript": "^3.7.4",
     "web3": "^2.0.0-alpha",
     "web3-utils": "^2.0.0-alpha"
   },
   "resolutions": {
-    "solc": "0.5.12",
+    "solc": "0.6.1",
     "sol-merger": "1.1.1"
   }
 }
